--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,3 +6,8 @@ body {
 	font: 100% $font-stack;
 	background-color: $bluebird;
 }
+
+.absolute-center {
+  //position: absolute;
+  margin: 0 auto;
+}
